--- a/proba2/src/css/TaskTable.css
+++ b/proba2/src/css/TaskTable.css
@@ -76,3 +76,9 @@
   font-weight: bold;
 }
 
+.btn-custom-blue {
+  background-color: #007bff !important;
+  border-color: #007bff !important;
+  color: white !important;
+}
+
