--- a/frontend/src/css/BudgetManagment.css
+++ b/frontend/src/css/BudgetManagment.css
@@ -2,15 +2,25 @@
 .budget-container {
     background: url('../images/tlo.jpg') no-repeat center center fixed;
     background-size: cover;
-    position: relative;
+    position: absolute;
     min-height: 100vh;
     padding: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    /* width: 100%; */
 }
 
+
+h1 {
+    font-family: "Poppins", sans-serif;
+    font-size: 28px !important;/* Slightly larger font size */
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 20px;
+    color: #ffffff; /* Change to white for better contrast */
+
+}
 /* Nakładka rozjaśniająca i rozmywająca obraz */
 .budget-container::before {
     content: '';
