--- a/frontend/src/css/Login.css
+++ b/frontend/src/css/Login.css
@@ -28,13 +28,24 @@
 }
 
 /* Nagłówek */
+/*
 h2 {
     font-family: "Poppins", sans-serif;
     font-size: 24px;
     font-weight: bold;
     text-align: center;
     margin-bottom: 20px;
-    color: #ffc107; /* Złoty kolor */
+    color: #ffc107; 
+}*/
+/* Login.css */
+h1 {
+    font-family: "Poppins", sans-serif;
+    font-size: 28px !important;/* Slightly larger font size */
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 20px;
+    color: #ffffff; /* Change to white for better contrast */
+
 }
 
 /* Formularz */
