--- a/frontend/src/css/Navbar.css
+++ b/frontend/src/css/Navbar.css
@@ -1,9 +1,19 @@
 /* General navbar styling */
 .custom-navbar {
+    position: fixed !important; /* Makes the navbar fixed at the top */
+    top: 0; /* Sticks it to the top of the viewport */
+    left: 0;
+    width: 100%; /* Ensures it spans the full width */
+    z-index: 1000; /* Ensures it stays above other elements */
     background-color: #343a40; /* Dark gray background */
     padding: 1rem;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
+
+.main-content {
+    padding-top:55px; /* Adjust this value to match the height of your navbar */
+}
+
 .notification-icon {
     background: none !important; /* Usuwa tło */
     border: none; /* Usuwa obramowanie */
