--- a/frontend/src/css/Signup.css
+++ b/frontend/src/css/Signup.css
@@ -36,6 +36,15 @@ signup-card h2 {
     margin-bottom: 20px;
     color: #ffc107; /* Złoty kolor */
 }
+h1 {
+    font-family: "Poppins", sans-serif;
+    font-size: 28px !important;/* Slightly larger font size */
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 20px;
+    color: #ffffff; /* Change to white for better contrast */
+
+}
 
 /* Formularz */
 .form-control {
