--- a/frontend/src/css/TaskCard.css
+++ b/frontend/src/css/TaskCard.css
@@ -15,22 +15,17 @@
 
 .task-card::after {
     content: "";
-    position: absolute;
+    position: relative;
+    z-index: 1000;
     top: 0;
     right: 0;
     width: 40px;
-    height: 40px;
+ 
     /* background: #28a745; */
-    clip-path: polygon(100% 0, 0 0, 100% 100%);
+
 }
 
-.phase-accepted::after {
-    background: #28a745;
-}
 
-.phase-prepared::after {
-    background: dodgerblue;
-}
 
 .task-card:hover {
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
